--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -11,7 +11,7 @@
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label>Fecha de Ingreso</label>
+                                        <label>Fecha de Ingreso al fondo</label>
                                         <input type="date" class="form-control" placeholder="Date of Entry">
                                     </div>
                                 </div>
@@ -130,53 +130,34 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label>Cargo  </label>
-                                        <input type="text" class="form-control" placeholder="User name">
-                                    </div>
-                                </div>
-                            </div>
-
-
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>First Name</label>
-                                        <input type="text" class="form-control" placeholder="Company">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>Last Name</label>
-                                        <input type="text" class="form-control" placeholder="Last Name" >
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>Address</label>
-                                        <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>City</label>
-                                        <input type="text" class="form-control" placeholder="City" value="Sistemas Palacios">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Country</label>
-                                        <input type="text" class="form-control" placeholder="Country" value="Colombia">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Postal Code</label>
-                                        <input type="number" class="form-control" placeholder="ZIP Code">
+                                        <select class="form-control">
+                                            <option value="option1">Seleccione</option>
+                                            
+                                            <option value="option1">Agente Callcenter</option>
+                                            <option value="option2">Agente NOC</option>
+                                            <option value="option2">Analista de red</option>
+                                            <option value="option2">Asesor comercial</option>
+                                            <option value="option2">Assistente de gerencia</option>
+                                            <option value="option2">Aux almacen</option>
+                                            <option value="option2">Aux cartera</option>
+                                            <option value="option2">Aux mensajeria</option>
+                                            <option value="option2">Aux recepcion y caja</option>
+                                            <option value="option2">Aux tesoreria</option>
+                                            <option value="option2">Aux programa</option>
+                                            <option value="option2">Contador </option>
+                                            <option value="option2">Coordinador SGSST</option>
+                                            <option value="option2">Coordinador Callcenter</option>
+                                            <option value="option2">Coordinador contable</option>
+                                            <option value="option2">Coordinador corporativo</option>
+                                            <option value="option2">Coordinador de inovacion</option>
+                                            <option value="option2">Coordinador juridico</option>
+                                            <option value="option2">Coordinador NOC</option>
+                                            <option value="option2">Coordinador operativo</option>
+                                            <option value="option2">Coordinador residencial</option>
+                                            <option value="option2">Ingeniero de innovacion</option>
+                                            <option value="option2">Revisor fiscal</option>
+                                            <option value="option2">Tecnico</option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -184,12 +165,12 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label>About Me</label>
-                                        <textarea rows="5" class="form-control" placeholder="Here can be your description" value="Fondo de empleados SP">Sistemas Palacios LTDA, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
+                                        <label>Correo electronico</label>
+                                        <input type="text" class="form-control" placeholder="Home Address" value="sistemaspalacios@prueba">
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
+                            <button type="submit" class="btn btn-info btn-fill pull-right">Registar empleado</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
@@ -210,10 +191,7 @@
                                 </h4>
                             </a>
                         </div>
-                        <p class="description text-center"> "Este sistema <br>
-                            es creado para la <br>
-                            administracion del fondo SP"
-                        </p>
+                       
                     </div>
                     <hr>
                     <div class="text-center">
