--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -176,28 +176,36 @@
                     </div>
                 </div>
             </div>
+            <style>
+                .image {
+                    position: relative;
+                    background: linear-gradient(rgba(255, 0, 0, 0.5), rgba(128, 128, 128, 0.5)), url('https://ununsplash.imgix.net/photo-1431578500526-4d9613015464?fit=crop&fm=jpg&h=300&q=75&w=400');
+                    background-size: cover;
+                    background-position: center;
+                    height: 300px; /* Ajusta la altura según sea necesario */
+                }
+            </style>
+            
             <div class="col-md-4">
                 <div class="card card-user">
                     <div class="image">
-                        <img src="https://ununsplash.imgix.net/photo-1431578500526-4d9613015464?fit=crop&fm=jpg&h=300&q=75&w=400" alt="..."/>
+                        <!-- No se necesita cambiar nada aquí -->
+                        <img src="assets/img/Sistemas.png" alt="..." />
                     </div>
                     <div class="content">
                         <div class="author">
                             <a href="#">
-                                <img class="avatar border-gray" src="assets/img/faces/fondo_sp.png" alt="..."/>
-
+                                <img class="avatar border-gray" src="assets/img/faces/fondo_sp.png" alt="..." />
+            
                                 <h4 class="title">Fondo de Empleados SP<br />
-                                    <small>Sistemas Palacios</small>
+                                    <small>Sistemas Palacios 2024</small>
                                 </h4>
                             </a>
                         </div>
-                       
                     </div>
                     <hr>
                     <div class="text-center">
                         <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
                     </div>
                 </div>
             </div>
