Ajuste en rutas y diseño

--- a/src/app/savings/savings.component.html
+++ b/src/app/savings/savings.component.html
@@ -4,39 +4,11 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="header">
-                        <h4 class="title">Registro de usuario</h4>
+                        <h4 class="title">Crear Ahorro</h4>
                     </div>
                     <div class="content">
                         <form>      
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Fecha de Ingreso al fondo</label>
-                                        <input type="date" class="form-control" placeholder="Date of Entry">
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <label>Departamento</label>
-                                    <select class="form-control">
-                                        <option value="option1">Seleccione</option>
-                                        <option value="option1">Nariño</option>
-                                        <option value="option2">Putumayo</option>
-                                        <option value="option2">Cauca</option>
-                                        <option value="option2">Valle</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-4">
-                                    <label>Municipio</label>
-                                    <select class="form-control">
-                                        <option value="option1">Seleccione</option>
-                                        <option value="option1">Pasto</option>
-                                        <option value="option2">Villa garzon</option>
-                                        <option value="option2">Popayan</option>
-                                        <option value="option2">Cali</option>
-                                    </select>
-                                </div>
-                            </div>
-                            
+                                   
                             <div class="row">
 
                                 <div class="col-md-3">
@@ -67,51 +39,11 @@
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label>Fecha nacimiento </label>
+                                        <label>Fecha de Inicio</label>
                                         <input type="date" class="form-control" placeholder="Date of Entry">
                                     </div>
                                 </div>
 
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Genero </label>
-                                        <select class="form-control">
-                                            <option value="option1">Seleccione</option>
-                                            <option value="option1">Masculino</option>
-                                            <option value="option2">Femenino</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Direccion</label>
-                                        <input type="text" class="form-control" placeholder="Number">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Telefono Uno </label>
-                                        <input type="text" class="form-control" placeholder="User name">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Telefono Dos </label>
-                                        <input type="text" class="form-control" placeholder="User name">
-                                    </div>
-                                </div>
-
-                            </div>
-
-
-                            <div class="row">
-
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Fecha ingreso empresa </label>
-                                        <input type="date" class="form-control" placeholder="Date of Entry">
-                                    </div>
-                                </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label>Dependencia</label>
@@ -127,12 +59,12 @@
                                         </select>
                                     </div>
                                 </div>
+
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label>Cargo  </label>
                                         <select class="form-control">
-                                            <option value="option1">Seleccione</option>
-                                            
+                                            <option value="option1">Seleccione</option>            
                                             <option value="option1">Agente Callcenter</option>
                                             <option value="option2">Agente NOC</option>
                                             <option value="option2">Analista de red</option>
@@ -160,17 +92,19 @@
                                         </select>
                                     </div>
                                 </div>
+                                
                             </div>
-
                             <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>Correo electronico</label>
-                                        <input type="text" class="form-control" placeholder="Home Address" value="sistemaspalacios@prueba">
-                                    </div>
+                                
+                                <div class="col-md-3">
+                                    <label>Valor Ahorro</label>
+                                    <input type="integer" class="form-control" placeholder="50.000">
                                 </div>
+
+
+
                             </div>
-                            <button type="submit" class="btn btn-info btn-fill pull-right">Registar empleado</button>
+                            <button type="submit" class="btn btn-info btn-fill pull-right">Crear Ahorro</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
