--- a/src/app/savings/savings.component.html
+++ b/src/app/savings/savings.component.html
@@ -98,13 +98,10 @@
                                 
                                 <div class="col-md-3">
                                     <label>Valor Ahorro</label>
-                                    <input type="integer" class="form-control" placeholder="50.000">
+                                    <input  type="integer" class="form-control" placeholder="50.000">
                                 </div>
-
-
-
                             </div>
-                            <button type="submit" class="btn btn-info btn-fill pull-right">Crear Ahorro</button>
+                            <button id="btnCreatesavings" type="submit" value="crearahorro" onclick="window.alert('Ahorro creado id 001')" class="btn btn-info btn-fill pull-right">Crear Ahorro</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
@@ -114,3 +111,4 @@
         </div>
     </div>
 </div>
+
